# nag

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  test.yaml
nag/: cli.py  core.py  db.py  helpers.py
tests/: test_core.py  test_db.py
