[tool.poetry]
name = "nag"
version = "0.1.0"
description = "A command line time blocker that nags you to get things done"
authors = ["Yogesh Kumar <ykumar@nyu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.8.1"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nag = "nag.cli:nag"